--- a/assessment.ipynb
+++ b/assessment.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n"
+    "select count(distinct CustomerId) from customers;"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": ["select floor(Milliseconds/(1000*60))%60 as `Minutes` from tracks;"]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +156,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": ["select g.name, avg(t.Milliseconds) as tracklength from tracks t join genres g on t.GenreId=g.GenreId group by g.genreId order by tracklength desc limit 1;"]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +172,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": ["select a.name,count(p.name) from artists  join album b on a.ArtistId=b.ArtistId join tracks t on b.AlbumId=t.AlbumId join playlist_track pt on t.trackId=pt.TrackId join playlists p on pt.PlaylistId=p.PlaylistId order by count(a.name) desc limit 1"]
   },
   {
    "cell_type": "markdown",
@@ -188,7 +188,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": ["select a.Title,sum(i.UnitPrice*i.Quantity) as Purchases from album a join tracks t on a.AlbumId=t.AlbumId join invoice_items i on t.trackId=i.TrackId group by a.Title order by Purchases limit 1;"]
   }
  ],
  "metadata": {
